--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "typescript-eslint": "^8.36.0"
   },
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.9",
+    "@arcjet/node": "^1.0.0-beta.9",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
