--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
   "dependencies": {
     "@arcjet/inspect": "^1.0.0-beta.9",
     "@arcjet/node": "^1.0.0-beta.9",
+    "@types/multer": "^2.0.0",
+    "@types/sharp": "^0.31.1",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
@@ -41,6 +44,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.3",
-    "nanoid": "^5.1.5"
+    "multer": "^2.0.1",
+    "nanoid": "^5.1.5",
+    "sharp": "^0.34.3"
   }
 }
